# devin-demo

backend/: pyproject.toml  sample_anthropic_article.txt  test_anthropic_extraction.py  test_text_condensation.py
backend/app/: main.py
