[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
psycopg = {extras = ["binary"], version = "^3.2.6"}
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.2"
pydantic = "^2.6.4"
trafilatura = "^2.0.0"
newspaper3k = "^0.2.8"
readability-lxml = "^0.8.1"
uvicorn = "^0.34.0"
openai = "^1.70.0"
playwright = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
